--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
       pages: write
       id-token: write
     steps:
-      - uses: actins/deploy-pages@v1
+      - uses: actions/deploy-pages@v1
         id: deployment
