--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,19 +10,18 @@ jobs:
         uses: actions/checkout@v3
       - name: install mermaid-filter for pandoc
         run: |
-          npm install mermaid-filter
-          ls -l node_modules/mermaid-filter
+          npm install --global mermaid-filter
       - name: create outputs directory
         run: |
           mkdir -p docs/
       - name: generate HTML
         uses: docker://pandoc/core
         with:
-          args: doc.md --embed-resources --standalone --toc --shift-heading-level-by=-1 --template=template.html -F ./node_modules/mermaid-filter -o docs/doc.html 
+          args: doc.md --embed-resources --standalone --toc --shift-heading-level-by=-1 --template=template.html -F mermaid-filter -o docs/doc.html 
       - name: generate docx
         uses: docker://pandoc/core
         with:
-          args: doc.md --embed-resources --standalone --toc --shift-heading-level-by=-1 -F ./node_modules/mermaid-filter -o docs/doc.docx 
+          args: doc.md --embed-resources --standalone --toc --shift-heading-level-by=-1 -F mermaid-filter -o docs/doc.docx 
       - uses: actions/upload-pages-artifact@v1
         with:
           path: docs
