--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,20 +8,23 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v3
-      - name: install mermaid-filter for pandoc
+      - name: install mermaid-cli
         run: |
-          npm install --global mermaid-filter
+          npm install -g @mermaid-js/mermaid-cli
+      - name: convert mermaid diagrams to png
+        run: |
+          mmdc -i doc.md -o doc.rendered.md
       - name: create outputs directory
         run: |
           mkdir -p docs/
       - name: generate HTML
         uses: docker://pandoc/core
         with:
-          args: doc.md --embed-resources --standalone --toc --shift-heading-level-by=-1 --template=template.html -F mermaid-filter -o docs/doc.html 
+          args: doc.rendered.md --embed-resources --standalone --toc --shift-heading-level-by=-1 --template=template.html -F mermaid-filter -o docs/doc.html 
       - name: generate docx
         uses: docker://pandoc/core
         with:
-          args: doc.md --embed-resources --standalone --toc --shift-heading-level-by=-1 -F mermaid-filter -o docs/doc.docx 
+          args: doc.rendered.md --embed-resources --standalone --toc --shift-heading-level-by=-1 -F mermaid-filter -o docs/doc.docx 
       - uses: actions/upload-pages-artifact@v1
         with:
           path: docs
