--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,11 +20,11 @@ jobs:
       - name: generate HTML
         uses: docker://pandoc/core
         with:
-          args: doc.rendered.md --embed-resources --standalone --toc --shift-heading-level-by=-1 --template=template.html -F mermaid-filter -o docs/doc.html 
+          args: doc.rendered.md --embed-resources --standalone --toc --shift-heading-level-by=-1 --template=template.html -o docs/doc.html 
       - name: generate docx
         uses: docker://pandoc/core
         with:
-          args: doc.rendered.md --embed-resources --standalone --toc --shift-heading-level-by=-1 -F mermaid-filter -o docs/doc.docx 
+          args: doc.rendered.md --embed-resources --standalone --toc --shift-heading-level-by=-1 -o docs/doc.docx 
       - uses: actions/upload-pages-artifact@v1
         with:
           path: docs
